# Omicron

./: .gitignore  CMakeLists.txt  README.md  coordinates.hpp  macos_renderer.cpp  main.cpp  math.hpp  omicron.sln  omicron.vcxproj  polygon.cpp  polygon.hpp  polyhedra.cpp  polyhedra.hpp  quaternion.cpp  quaternion.hpp  render.hpp  vector3d.cpp  vector3d.hpp  win32_renderer.cpp
src/: coordinates.cpp  coordinates.hpp  main.cpp  polygon.cpp  polygon.hpp  quaternion.cpp  quaternion.hpp  render.cpp  vector3d.cpp  vector3d.hpp
